# turnwatcher

./: .gitignore  CMakeLists.txt  COPYING  ChangeLog  Doxyfile  README  TODO  run  turnwatcher.desktop.in
src/: CMakeLists.txt
src/convert/: CMakeLists.txt  Variant.cpp  Variant.h  XmlVariant.cpp  XmlVariant.h
src/gui/: AbilityEditor.cpp  AbilityEditor.h  AboutWindow.cpp  AboutWindow.h  ActionsManager.cpp  ActionsManager.h  AppSettings.cpp  AppSettings.h  CMakeLists.txt  CharacterColumns.cpp  CharacterColumns.h  CharacterListUI.cpp  CharacterListUI.h  CharacterManager.cpp  CharacterManager.h  DamageWindow.cpp  DamageWindow.h  DefineInitWindow.cpp  DefineInitWindow.h  DuplicateResolver.cpp  DuplicateResolver.h  DuplicateRoll.cpp  DuplicateRoll.h  DuplicateWindow.cpp  DuplicateWindow.h  EditWindow.cpp  EditWindow.h  EffectEditor.cpp  EffectEditor.h  EffectsBook.cpp  EffectsBook.h  EffectsEditor.cpp  EffectsEditor.h  EffectsList.cpp  EffectsList.h  ExpiredEffectsWindow.cpp  ExpiredEffectsWindow.h  GtkUiBase.cpp  GtkUiBase.h  HUDWindow.cpp  (+49 more)
src/gui/base/: ActionsManager.cpp  ActionsManager.h  AppSettings.cpp  AppSettings.h  CharacterColumns.cpp  CharacterColumns.h  CharacterManager.cpp  CharacterManager.h  CharacterModel.cpp  CharacterModel.h  DuplicateResolver.cpp  DuplicateResolver.h  DuplicateRoll.cpp  DuplicateRoll.h  InitiativeManager.cpp  InitiativeManager.h  LegacyApp.cpp  LegacyApp.h  LegacyCharacter.cpp  LegacyCharacter.h  ManagerBase.h  SoftColumns.cpp  SoftColumns.h  StatManager.cpp  StatManager.h  character.cpp  character.h  common.cpp  common.h  effect.cpp  effect.h  stat.cpp  stat.h  transaction.cpp  transaction.h
src/gui/config/: build_version.h  system.h.in  version.h.in
src/gui/pixmaps/: MnstrIcon.xpm  Octo.xpm  Theif.xpm  arrow.xpm  d20_64.psd  d20_init.xpm  d20_will.xpm  d20icon1.xpm  delete.xpm  helmet.xcf  jump_in.xpm  start.xpm  website.xpm
src/gui/po/: README.txt  es.po  fr.po
src/gui/res/: resources.qrc
src/gui/res/icons/: damage.xpm  end.xpm  next.xpm  no_arrow.xpm  turnwatcher.icns
src/gui/transactions/: BleedOutTransaction.cpp  BleedOutTransaction.h  CharacterEntry.cpp  CharacterEntry.h  DamageTransaction.cpp  DamageTransaction.h  DelayTransaction.cpp  DelayTransaction.h  EffectHandler.cpp  EffectHandler.h  ForceInitiative.cpp  ForceInitiative.h  InitiativeBase.cpp  InitiativeBase.h  MoveCharacterInInitiative.cpp  MoveCharacterInInitiative.h  MoveSelectedCharacters.cpp  MoveSelectedCharacters.h  NextInitTransaction.cpp  NextInitTransaction.h  ResolveInitiativeDuplicates.cpp  ResolveInitiativeDuplicates.h  RollTransaction.cpp  RollTransaction.h  SetDefaultSort.cpp  SetDefaultSort.h  SortTransaction.cpp  SortTransaction.h  StabilizeTransaction.cpp  StabilizeTransaction.h  UITransactionBase.cpp  UITransactionBase.h  UltraInitTransaction.h  transactions.h
src/gui/ui/: AbilityEditor.cpp  AbilityEditor.h  AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  AboutWindow.cpp  AboutWindow.h  CharacterView.cpp  CharacterView.h  DamageWindow.cpp  DamageWindow.h  DefineInitWindow.cpp  DefineInitWindow.h  DuplicateWindow.cpp  DuplicateWindow.h  EditWindow.cpp  EditWindow.h  EffectEditor.cpp  EffectEditor.h  EffectsBook.cpp  EffectsBook.h  EffectsEditor.cpp  EffectsEditor.h  EffectsList.cpp  EffectsList.h  ExpiredEffectsWindow.cpp  ExpiredEffectsWindow.h  HUDWindow.cpp  HUDWindow.h  InfoBox.cpp  InfoBox.h  InfoWindow.cpp  InfoWindow.h  InitWindow.cpp  InitWindow.h  InputWindow.cpp  InputWindow.h  JumpInWindow.cpp  JumpInWindow.h  MainWindow.cpp  (+19 more)
src/gui/ui-gtk/: AbilityEditor.cpp  AbilityEditor.h  AboutWindow.cpp  CharacterView.cpp  CharacterView.h  DamageWindow.cpp  DamageWindow.h  DefineInitWindow.cpp  DefineInitWindow.h  DuplicateWindow.cpp  DuplicateWindow.h  EditWindow.cpp  EditWindow.h  EffectEditor.cpp  EffectEditor.h  EffectsBook.cpp  EffectsBook.h  EffectsEditor.cpp  EffectsList.cpp  EffectsList.h  ExpiredEffectsWindow.cpp  ExpiredEffectsWindow.h  InfoBox.cpp  InfoWindow.cpp  InfoWindow.h  InitWindow.cpp  InitWindow.h  InputWindow.cpp  InputWindow.h  JumpInWindow.cpp  JumpInWindow.h  MainWindow.cpp  MainWindow.h  NagWindow.cpp  RoundsHelper.cpp  SaveWindow.h  SettingsWindow.cpp  SettingsWindow.h  Splash.cpp  StatEditor.cpp  (+4 more)
src/gui/ui/res/: add.xpm  d20_listen.xpm  d20_spot.xpm  delay.xpm  edit.xpm  helmet.xpm  hero.xpm  ready.xpm  resources.qrc
src/gui/ui/save/: MainWindow.cpp  MainWindow.h
src/gui/win32/: resources.rc
src/molib/: CMakeLists.txt  config.h.cmake
src/molib/generators/: CMakeLists.txt  Makefile.am  amakefile  async_functions.cpp  controlled_vars.cpp  transaction_builder.cpp
src/molib/include/mo/: mo_application.h  mo_array.h  mo_auto_restore.h  mo_base.h  mo_buffer.h  mo_config.h  mo_controlled.h  mo_crypt.h  mo_directory.h  mo_dirent.h  mo_error.h  mo_event.h  mo_export.h  mo_expr.h  mo_fifo.h  mo_file.h  mo_getopt.h  mo_gzip.h  mo_image.h  mo_list.h  mo_luhn.h  mo_memfile.h  mo_menu_item.h  mo_menu_manager.h  mo_module.h  mo_mutex.h  mo_name.h  mo_passwd.h  mo_process.h  mo_props.h  (+23 more)
src/molib/license/: CMakeLists.txt  license.h  main.cpp
src/molib/src/: application.cpp  array.cpp  base.cpp  buffer.cpp  crypt.cpp  directory.cpp  error.cpp  event.cpp  expr.cpp  fifo.cpp  file.cpp  getopt.cpp  gzip.cpp  html_dtd.cpp  image.cpp  image_bmp.cpp  image_file.cpp  image_gif.cpp  image_jpeg.cpp  image_png.cpp  image_ppm.cpp  image_raw.cpp  image_sgi.cpp  image_targa.cpp  image_tiff.cpp  list.cpp  luhn.cpp  memfile.cpp  menu_item.cpp  menu_manager.cpp  module.cpp  mutex.cpp  name.cpp  passwd.cpp  process.cpp  props.cpp  props_xml.cpp  random.cpp  regexpr.cpp  simple_editor.cpp  (+14 more)
src/motk/: ActionManager.cpp  ActionManager.h  CMakeLists.txt  Chooser.cpp  Chooser.h  Common.h  HtmlWidget.cpp  HtmlWidget.h  LabelTable.cpp  LabelTable.h  LabelTableScroller.cpp  LabelTableScroller.h  MenuManager.cpp  MenuManager.h  Menu_event.async  UiBase.cpp  UiBase.h
src/package/: CMakeLists.txt
src/tests/: Makefile.am  character-maint.cpp
tests/: Makefile.am  StatTest.cpp
tests/font/: Makefile  examplewindow.cc  examplewindow.h  main.cc
(+578 files in other folders)
